--- a/src/FitnessFrog/FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Entries/Add.cshtml
@@ -2,6 +2,13 @@
 
 @{
     ViewBag.Title = "Add Entry";
+
+var items = new[]
+    {
+        new {  Id = 1, Name = "Item 1"},
+        new {  Id = 2, Name = "Item 2"},
+    };
+var selectedItems = new SelectList(items, "Id", "Name");
 }
 
 <h2>@ViewBag.Title</h2>
@@ -19,7 +26,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.ActivityId, new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectedListItems, "", new { @class = "form-control" })
             </div>
 
             <div class="form-group">
