--- a/src/FitnessFrog/FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Entries/Add.cshtml
@@ -1,14 +1,8 @@
 ﻿@model FitnessFrog.Models.Entry
+@using FitnessFrog.Models
 
 @{
     ViewBag.Title = "Add Entry";
-
-var items = new[]
-    {
-        new {  Id = 1, Name = "Item 1"},
-        new {  Id = 2, Name = "Item 2"},
-    };
-var selectedItems = new SelectList(items, "Id", "Name");
 }
 
 <h2>@ViewBag.Title</h2>
@@ -36,7 +30,20 @@ var selectedItems = new SelectList(items, "Id", "Name");
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Intensity, new { @class = "form-control" })
+                <div>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                            Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                            Entry.IntensityLevel.Medium) @Entry.IntensityLevel.Medium
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                            Entry.IntensityLevel.High) @Entry.IntensityLevel.High
+                    </label>
+                 </div>
             </div>
 
             <div class="form-group">
