--- a/src/FitnessFrog/FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Shared/_Layout.cshtml
@@ -62,9 +62,11 @@
         </footer>
     </div>
 
-    <script src="~/Script/jquery-1.10.2.min.js"></script>
-    <script src="~/Script/bootstrap.min.js"></script>
-    <script src="~/Script/bootstrap-datepicker.min.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
     <script>
         $('input.datepicker').datepicker({ format: 'm/d/yyyy' });
     </script>
