--- a/src/FitnessFrog/FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Shared/_Layout.cshtml
@@ -65,10 +65,16 @@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.validate.bootstrap.js"></script>
+    <script src="~/Scripts/moment.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
     <script>
-        $('input.datepicker').datepicker({ format: 'm/d/yyyy' });
+        $(document).ready(function () {
+            $("input.datepicker").datepicker({
+                format: "m/d/yyyy",
+            });
+        });
     </script>
 </body>
 </html>
