--- a/src/FitnessFrog/FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Shared/_Layout.cshtml
@@ -66,13 +66,12 @@
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/jquery.validate.bootstrap.js"></script>
-    <script src="~/Scripts/moment.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
     <script>
         $(document).ready(function () {
             $("input.datepicker").datepicker({
-                format: "m/d/yyyy",
+                format: "m/d/yyyy"
             });
         });
     </script>
