--- a/src/FitnessFrog/FitnessFrog/Views/Entries/Edit.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Entries/Edit.cshtml
@@ -1,6 +1,9 @@
-﻿
+﻿@model FitnessFrog.Models.Entry
+
 @{
     ViewBag.Title = "Edit Entry";
 }
 
 <h2>@ViewBag.Title</h2>
+
+@Html.Partial("_EntryForm")
