Fixed for 404 fonts error, datetime fireld error(standardize to MM/dd/yyy for all)

--- a/src/FitnessFrog/FitnessFrog/Views/Entries/Delete.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Entries/Delete.cshtml
@@ -18,7 +18,7 @@
                 @Html.LabelFor(m => m.Date)
             </div>
             <div class="col-xs-8 col-sm-9">
-                @Model.Date.ToShortDateString()
+                @Model.Date.ToString("MM'/'dd'/'yyyy")
             </div>
         </div>
 
