--- a/src/FitnessFrog/FitnessFrog/Views/Entries/_EntryForm.cshtml
+++ b/src/FitnessFrog/FitnessFrog/Views/Entries/_EntryForm.cshtml
@@ -10,7 +10,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Date, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Date, "{0:d}", new { @class = "form-control datepicker" })
+                @Html.TextBoxFor(m => m.Date, "{0:MM/dd/yyyy}", new { @class = "form-control datepicker" })
             </div>
 
             <div class="form-group">
